	  BOTHER is gone again.
	* arch/arm/src/stm32/stm32_sdio.c and chip/stm32f20xx_pinmap.h:  STM32 F2 SDIO
	  fixes from Gary Teravskis and Scott Rondestvedt.
	* include/termios.h and lib/termios/*:  Replace cfsetispeed and cfsetospeed with
	  cfsetspeed (with definitions for the input/outputs in termios.h).  Same for
	  cfgetispeed and cfgetospeed.
	* configs/stm32f4discovery/src and configs/stm32f4discovery/pm:  Add a power
	  management configuration for the STM32F4Discovery and supporting logic.  This
	  check-in also includes some fixes for the F4 RTC alarm logic.
	* drivers/input/pga11x.c and include/nuttx/input/pga11x.h:  Add support for the
	  TI PGA112/3/6/7 amplifier/multiplexer parts.
	* configs/mirtoo/README.txt, nsh/defconfig, and nxffs/defconfig:  Add support
	  for the PGA117 on the Mirtoo module.
	* drivers/analog/pga11x.c and include/nuttx/analog/pga11x.h:  These belong in
	  the analog subdirectories, not input.
	* configs/compal_e99/src/ssd1783.c and /ssd1783.h:  Drivers for the SSD1783
	  LCD found in the Motorola C155 telephone.  The driver is specific to the C155
	  because it uses the uwire transport.  Contributed by Denis Carilki and
	  Alan Carvalho de Assis.
	* drivers/power/pm_changestate.c.  Correct a case where interrupts were not
	  being re-enabled.  Found by Diego Sanchez.
	* configs/mirtoo/nxffs/defconfig:  This Mirtoo NXFFS configuration now uses the
	  open Pinguino toolchain by default.  This is necessary because the free C32
	  toolchain does not support any optimization and the unoptimized NXFFS image
	  hits the PIC32MX2 FLASH size (128K).  There is plenty of room to grow using
	  the Pinguino toolchain with -O2 optimization.
	* configs/mirtoo/src/up_adc.c.  This is just a stub for now, but this is
	  where Mirtoo ADC logic will eventually need to go.
	* arch/mips/src/pic32mx/pic32mx-gpio.c:  Now supports the PIC32MX1/2 ANSEL
	  IOPORT register.
	* lib/string/lib_memchr.c:  Add support for memchr()
